# morgan-norwegian-taxes

./: .gitignore  README.md  pyproject.toml
espp2/: __init__.py  data.json  datamodels.py  espp2.py  fmv.py  main.py  skatterapport.py  transactions.py
espp2/data/: CURRENCY_USD.json  DIVIDENDS_GOOG.json  FUNDAMENTALS_GOOG.json  STOCK_GOOG.json
espp2/plugins/: morgan_pdf.py
espp2/web/: server.py
espp2/web/static/: app.js  index.html  styles.css
